Edit: Add Header and box for timer

--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
     <link rel="stylesheet" href="./assests/styles/style.css">
 </head>
 <body>
+    <div>
+        <div class="flex flex-col justify-center items-center mx-auto bg-zinc-300  my-auto">
+           <h1 class="py-10 text-pink-500">This is JavaScript Clock 😍</h1>
+        </div>
+    </div>
+    <div class="flex justify-center items-center">
+        <div class="flex justify-center items-center w-96 h-20 bg-gray-700 text-white my-20 rounded-lg">
+            <!-- Time Show Here -->
+        </div>
+    </div>
 </body>
+<script src="./assests/js/index.js"></script>
 </html>
