Fix: Clock Time and add css to numbers.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,23 @@
 <body>
     <div>
         <div class="flex flex-col justify-center items-center mx-auto bg-zinc-300  my-auto">
-           <h1 class="py-10 text-pink-500">This is JavaScript Clock 😍</h1>
+            <h1 class="py-10 text-pink-500">This is JavaScript Clock 😍</h1>
+        </div>
+        <h2 class="bg-gray-700 text-white flex justify-center py-3">Follow me On Instagram</h2>
+        <h2 class="bg-zinc-400 text-teal-400 flex justify-center py-3 "> <a href="https://www.instagram.com/psy.codes/" target="_blank">@psy.codes</a></h2>
+    </div>
+    <div class="flex flex-col justify-center items-center">
+        <div class="flex justify-center items-center w-96 h-32 bg-gray-700 text-white my-20 rounded-lg">
+            <!-- Time Show Here -->
+            <span id="hours" class="flex mx-4 border-2 border-orange-200 p-4 rounded-lg bg-violet-400 text-black"></span>
+            <span id="minutes" class="flex mx-4 border-2 border-orange-200 p-4 rounded-lg bg-violet-400 text-black"></span>
+            <span id="seconds" class="flex mx-4 border-2 border-orange-200 p-4 rounded-lg bg-violet-400 text-black"></span>
         </div>
     </div>
-    <div class="flex justify-center items-center">
-        <div class="flex justify-center items-center w-96 h-20 bg-gray-700 text-white my-20 rounded-lg">
-            <!-- Time Show Here -->
-        </div>
+    <div class="flex flex-col text-white justify-center items-center mx-auto">
+        <span class="bg-gray-700 px-4 py-2 my-2 rounded-xl">Made By:</span>
+        <span class="bg-gray-700 px-4 py-2 my-2 rounded-xl">Kannu Mandora</span>
+        <span class="bg-gray-700 px-4 py-2 my-2 rounded-xl"><a href="https://github.com/Kannu-Mandora" target="_blank">GitHub</a> </span>
     </div>
 </body>
 <script src="./assests/js/index.js"></script>
