--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
         <span class="bg-gray-700 px-4 py-2 my-2 rounded-xl"><a href="https://github.com/Kannu-Mandora" target="_blank">GitHub</a> </span>
     </div>
 </body>
-<script src="./assests/js/index.js"></script>
+<script src="./assests/js/index.js" type="module" ></script>
 </html>
